--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-	"name": "tinymce",
+	"name": "tiny-mce-nwt",
 	"description": "Web based JavaScript HTML WYSIWYG editor control.",
 	"license": "LGPL-2.1",
 	"keywords": [
